--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.4",
     "jest": "^26.0.1",
+    "nodemon": "^2.0.4",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.1.3",
     "supertest": "^4.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0"
   }
 }
